# omogenjudge

./: .bazelrc  .clang-tidy  .gitignore  .mypy.ini  .travis.yml  BUILD.bazel  LICENSE  README.md  WORKSPACE  manage.py  omogenexec.deb  package-lock.json  package.json  pyproject.toml  tsconfig.json
admin/: BUILD  add_contest.sh  add_course.sh  add_problem.sh  build.sh  deploy-local.sh  deploy-master.sh  deploy.sh  drop_course.sh  drop_problem.sh  new_db.sh  reset_schema.sh
admin/addcourse/: BUILD.bazel  addcourse.go
api/: BUILD  containerspec.proto  execspec.proto  omogenexec.proto  resources.proto
cli/: BUILD  main.cc
config/: users.conf
container/: BUILD  cgroups.cc  cgroups.h  chroot.cc  chroot.h  container.cc  container.h  init.cc  init.h
daemon/: BUILD  executor.cc  executor.h  main.cc
deb/: BUILD  omogenexecd
deploy/: deploy-host.sh  deploy-queue.sh  deploy-web.sh  example_hosts  host.yml  queue.yml  web.yml
development/: clear_submissions.sh  install_builddeps.sh  install_devdeps.sh  new_db.sh  requeue_stuck.sh  typecheck.sh
devtools/: buildall.sh  gen_compilation_db.sh
docs/: architecture.md  index.md  installation.md
errors/: BUILD  errors.cpp  errors.h
filehandler/api/: BUILD.bazel  filehandler.proto
filehandler/client/: BUILD.bazel  client.go
filehandler/server/: BUILD.bazel  main.go
filehandler/service/: BUILD.bazel  service.go
frontend/contests/: BUILD.bazel  scoreboard.go  team_list.go  team_register.go  team_start.go
frontend/courses/: BUILD.bazel  chapter.go  course.go  list.go  section.go
frontend/deb/: BUILD.bazel  omogenjudge-frontend.service
frontend/deb/debian/: postinst  postrm  prerm
frontend/home/: BUILD.bazel  home.go
frontend/middleware/: BUILD  BUILD.bazel  contest.go  doc.go  i18n.go  middlewares.go  session.go  user.go
frontend/submissions/: BUILD.bazel  view.go
frontend/templates/: BUILD  BUILD.bazel  footer.tpl  header.tpl  nav.tpl  templates.go
frontend/templates/contests/: scoreboard.tpl  team_list.tpl  team_register.tpl
frontend/templates/courses/: chapter.tpl  course.tpl  helpers.tpl  list.tpl  section.tpl
frontend/templates/courses/content-helpers/: helpers.tpl
frontend/templates/editor/: view.tpl
frontend/templates/helpers/: contest.tpl
frontend/templates/home/: contest_home.tpl  home.tpl
frontend/templates/problems/: helpers.tpl  list.tpl  submit.tpl  view.tpl
frontend/templates/submissions/: helpers.tpl  view.tpl
frontend/templates/users/: login.tpl  register.tpl  view.tpl
frontend/util/: BUILD.bazel  langs.go
frontend_assets/: build_assets.sh  package-lock.json  package.json  tsconfig.json  watch_assets.sh
js/: context.ts  countdown.ts  times.ts
judgehost/: .bazel_fix_commands.json  BUILD.bazel  WORKSPACE  go.mod  go.sum
judgehost/judgehost/: BUILD.bazel  eval.go  main.go
judgehost/judgehost/api/: BUILD.bazel  judgehost.proto
judgehost/judgehost/deb/: BUILD.bazel  judgehost.toml
judgehost/judgehost/deb/debian/: postinst
judgehost/queue/: main.go
judgehost/queue/deb/: BUILD.bazel  omogenjudge-queue.service
judgehost/queue/deb/debian/: postinst  prerm
judgehost/storage/: BUILD.bazel  models.go
judgemaster/queue/: :w  BUILD.bazel  queue.go
judgemaster/server/: BUILD.bazel  main.go
localjudge/deb/: BUILD.bazel  omogenjudge-local.service
localjudge/deb/debian/: postinst  postrm  prerm
localjudge/deb/etc/: BUILD.bazel  passwd
localjudge/server/: BUILD.bazel  main.go
logger/: BUILD  logger.cpp  logger.h
masterjudge/api/: BUILD.bazel  master.proto
masterjudge/deb/: BUILD.bazel  omogenjudge-master.service
masterjudge/deb/debian/: postinst  postrm  prerm
masterjudge/server/: BUILD.bazel  main.go
masterjudge/service/: BUILD.bazel  service.go
omogenfrontend/: package-lock.json  package.json  tsconfig.json
omogenhost/: .eslintrc.js  BUILD.bazel  WORKSPACE  babelrc.js  go.mod  go.sum  package-lock.json  package.json  tsconfig.json  webpack.config.js  webpack.dev.js  webpack.prod.js
omogenhost/frontend/assets/: index.html
omogenhost/frontend/bootstrap/: _variables.scss  main.scss
omogenhost/frontend/src/: App.scss  App.tsx  index.scss  index.tsx
omogenhost/frontend/src/accounts/: auth.ts
omogenhost/frontend/src/accounts/login/: Login.tsx  Logout.tsx
omogenhost/frontend/src/accounts/register/: RegisterAccount.tsx
omogenhost/frontend/src/api/: react_request.ts  request.ts
omogenhost/frontend/src/problems/view/: ViewProblem.scss  ViewProblem.tsx
omogenhost/frontend/src/shared/container/: Page.tsx
omogenhost/frontend/src/shared/latex/: LatexContainer.tsx
omogenhost/frontend/src/shared/menu/: Menu.tsx
omogenhost/frontend/src/shared/toasts/: Toasts.scss  Toasts.tsx
omogenhost/judgehost/: BUILD.bazel  eval.go  main.go
omogenhost/judgehost/deb/: BUILD.bazel  omogenjudge-host.service
omogenhost/judgehost/deb/debian/: postinst  postrm  prerm
omogenhost/queue/: BUILD.bazel  main.go
omogenhost/queue/deb/: BUILD.bazel  queue.toml
omogenhost/queue/deb/debian/: postrm
omogenhost/scripts/: webpack_dev.js
omogenhost/storage/: db.go  models.go
omogenhost/webapi/: BUILD.bazel  main.go
omogenhost/webapi/accounts/: BUILD.bazel  api.go
omogenhost/webapi/deb/: BUILD.bazel  omogenjudge-api.service  webapi.toml
omogenhost/webapi/deb/debian/: postinst  postrm  prerm
omogenhost/webapi/problems/: BUILD.bazel  api.go
omogenhost/webapi/proto/: BUILD.bazel  account_service.proto  options.proto  problem_service.proto  problems.proto
omogenhost/webapi/requests/: BUILD.bazel  cookies.go  user_context.go
omogenjudge/: asgi.py  urls.py  wsgi.py
packaging/: build-host.sh  build-queue.sh  build-web.sh
problemtools/: \
problemtools/contests/: BUILD.bazel  install_contest.go
problemtools/courses/: BUILD.bazel  chapter_parse.go  course_parse.go  markdown.go  parse.go  section_parse.go
proto/: BUILD  container.proto  execspec.proto  omogenexec.proto  resources.proto
sandbox/: BUILD  README.md  cgroups.cc  chroot.cc  container.cc  init.cc  init.h  main.cc  sandbox.cpp  sandbox.h
schema/: BUILD.bazel  schema.sql
(+782 files in other folders)
