[tool.poetry]
name = "omogenjudge"
version = "0.1.0"
description = ""
authors = ["Johan Sannemo <jsannemo@jsannemo.se>"]
include = [
    "omogenjudge/*",
    "omogenjudge/**/*",
]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1"
psycopg2 = "^2.9.3"
problemtools = {git = "https://github.com/kattis/problemtools", branch = "develop"}
django-crispy-forms = "^1.14.0"
crispy-bootstrap5 = "^0.6"
uWSGI = "^2.0.20"
build = "^0.8.0"
Jinja2 = "^3.1.2"
Unidecode = "^1.3.4"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
django-stubs = {extras = ["compatible-mypy"], version = "^1.12.0"}
mypy = "^0.931"
django-debug-toolbar = "^3.6.0"
types-toml = "^0.10.8"

[tool.poetry.group.dev.dependencies]
ansible = "^6.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
