load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

go_proto_library(
    name = "filehandler_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/jsannemo/omogenjudge/filehandler/api",
    proto = ":omogen_filehandler_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    embed = [":filehandler_go_proto"],
    importpath = "github.com/jsannemo/omogenjudge/filehandler/api",
    visibility = ["//visibility:public"],
)

proto_library(
    name = "omogen_filehandler_proto",
    srcs = ["filehandler.proto"],
    visibility = ["//visibility:public"],
)
