load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["service.go"],
    importpath = "github.com/jsannemo/omogenjudge/filehandler/service",
    visibility = ["//localjudge:__subpackages__"],
    deps = [
        "//filehandler/api:go_default_library",
        "//util/go/filestore:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
    ],
)
