load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "middleware",
    srcs = [
        "contest.go",
        "doc.go",
        "i18n.go",
        "middlewares.go",
        "session.go",
        "user.go",
    ],
    importpath = "github.com/jsannemo/omogenjudge/frontend/middleware",
    visibility = ["//frontend:__subpackages__"],
    deps = [
        "//frontend/request",
        "//storage/contests:go_default_library",
        "//storage/users",
        "@com_github_google_logger//:go_default_library",
        "@com_github_gorilla_sessions//:go_default_library",
        "@org_golang_x_text//language:go_default_library",
    ],
)
