load("@io_bazel_rules_go//go:def.bzl", "go_library")

filegroup(
    name = "templates",
    srcs = glob(["**/*.tpl"]),
    visibility = ["//frontend:__subpackages__"],
)

go_library(
    name = "go_default_library",
    srcs = ["templates.go"],
    data = [":templates"],
    importpath = "github.com/jsannemo/omogenjudge/frontend/templates",
    visibility = ["//visibility:public"],
    deps = [
        "//frontend/paths",
        "//frontend/util:go_default_library",
        "@com_github_masterminds_sprig//:go_default_library",
    ],
)
