load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["langs.go"],
    importpath = "github.com/jsannemo/omogenjudge/frontend/util",
    visibility = ["//visibility:public"],
    deps = [
        "//masterjudge/api:go_default_library",
        "//masterjudge/client:go_default_library",
        "//runner/api:go_default_library",
        "@com_github_google_logger//:go_default_library",
    ],
)
