load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["queue.go"],
    importpath = "github.com/jsannemo/omogenjudge/judgemaster/queue",
    visibility = ["//visibility:public"],
    deps = [
        "//storage/db:go_default_library",
        "//storage/models:go_default_library",
        "//storage/submissions:go_default_library",
        "@com_github_google_logger//:go_default_library",
    ],
)
