load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/jsannemo/omogenjudge/localjudge/server",
    visibility = ["//visibility:private"],
    deps = [
        "//filehandler/service:go_default_library",
        "//problemtools/service:go_default_library",
        "//runner/language:go_default_library",
        "//runner/service:go_default_library",
        "@com_github_google_logger//:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_binary(
    name = "omogenjudge-local",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
