load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "omogen_master_proto",
    srcs = ["master.proto"],
    visibility = ["//visibility:public"],
    deps = ["//runner/api:omogen_runner_proto"],
)

go_proto_library(
    name = "omogen_master_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/jsannemo/omogenjudge/masterjudge/api",
    proto = ":omogen_master_proto",
    visibility = ["//visibility:public"],
    deps = ["//runner/api:go_default_library"],
)

go_library(
    name = "go_default_library",
    embed = [":omogen_master_go_proto"],
    importpath = "github.com/jsannemo/omogenjudge/masterjudge/api",
    visibility = ["//visibility:public"],
)
