load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["service.go"],
    importpath = "github.com/jsannemo/omogenjudge/masterjudge/service",
    visibility = ["//masterjudge:__subpackages__"],
    deps = [
        "//masterjudge/api:go_default_library",
        "//runner/api:go_default_library",
        "//runner/client:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
    ],
)
