load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "webapi_lib",
    srcs = ["main.go"],
    importpath = "github.com/jsannemo/omogenhost/webapi",
    visibility = ["//visibility:private"],
    deps = [
        "//storage",
        "//webapi/accounts",
        "//webapi/problems",
        "//webapi/proto",
        "//webapi/requests:request",
        "@com_github_burntsushi_toml//:toml",
        "@com_github_google_logger//:logger",
        "@com_github_improbable_eng_grpc_web//go/grpcweb",
        "@io_gorm_gorm//:gorm",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//metadata",
    ],
)

go_binary(
    name = "webapi",
    embed = [":webapi_lib"],
    visibility = ["//visibility:public"],
)
