load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["install_contest.go"],
    importpath = "github.com/jsannemo/omogenjudge/problemtools/contests",
    visibility = ["//visibility:public"],
    deps = [
        "//problemtools/api:go_default_library",
        "//problemtools/util:go_default_library",
        "//storage/contests:go_default_library",
        "//storage/models:go_default_library",
        "//storage/problems",
    ],
)
