load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "chapter_parse.go",
        "course_parse.go",
        "markdown.go",
        "parse.go",
        "section_parse.go",
    ],
    importpath = "github.com/jsannemo/omogenjudge/problemtools/courses",
    visibility = ["//visibility:public"],
    deps = [
        "//problemtools/api:go_default_library",
        "//problemtools/util:go_default_library",
        "@com_github_alecthomas_chroma//formatters/html:go_default_library",
        "@com_github_alecthomas_chroma//:go_default_library",
        "@com_github_alecthomas_chroma//lexers:go_default_library",
        "@com_github_alecthomas_chroma//styles:go_default_library",
        "@com_github_gomarkdown//:go_default_library",
        "@com_github_gomarkdown//ast:go_default_library",
        "@com_github_gomarkdown//html:go_default_library",
    ],
)
